<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/description"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/map_query"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/toolbar_controls"
                    android:layout_alignParentLeft="true"
                    android:textColor="@android:color/white"/>

                <Button
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:id="@+id/map_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/custom_selection_view"
                    android:layout_toRightOf="@id/map_query"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/map_theme"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/image_gallery"
                    android:layout_toRightOf="@id/map_statistics"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/sample_else"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/else_theme"
                    android:layout_toRightOf="@id/map_theme"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/user_setting"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/user_theme"
                    android:layout_toRightOf="@id/sample_else"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
